# tap-salesforce

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: veracode-static-scan.yml
tap_salesforce/: __init__.py  sync.py
tap_salesforce/salesforce/: __init__.py  bulk.py  exceptions.py  report_rest.py  rest.py
