[tool.poetry]
name = "tap-salesforce"
version = "4.0.0"
description = "Singer.io tap for extracting data from the Salesforce API"
authors = ["Stitch"]
homepage = "https://singer.io"
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "^3.13.0"
requests = "^2.32.0"
singer-python = "6.3.0"
xmltodict = "^1.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[tool.poetry.scripts]
tap-salesforce = "tap_salesforce:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
